--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <body>
     <div class="container">
         <h1>Phone Number Selector</h1>
-        <button class="btn" id="country-code-btn">Country Code</button>
-        <div class="output" id="country-code-output">Country Code: +1</div>
+        <button class="btn" id="country-code-btn">Chose Country Code</button>
+        <div class="output" id="country-code-output">Country Code: +0</div>
 
         <input type="range" class="slider" id="phone-slider" min="0" max="9999999999" step="1">
         <div class="output">Phone Number: <span id="phone-output">0000000000</span></div>
+
+        <button class="copy-btn" id="copy-btn">Copy</button>
     </div>
+
+    
+
 
     <script src="script.js"></script>
 </body>
